Created Source, Step, and Build classes. Also created CircleCiSource class, and built some foundational code to query data from CircleCI and display it.

--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -23,7 +23,7 @@
   <depends>com.intellij.modules.lang</depends>
 
   <extensions defaultExtensionNs="com.intellij">
-    <toolWindow id="Continuous Integration" anchor="right" factoryClass="ciToolWindow.CiToolWindowFactory" />
+    <toolWindow id="Continuous Integration" anchor="right" factoryClass="ui.ciToolWindow.CiToolWindowFactory" />
     <!-- Add your extensions here -->
   </extensions>
 
