Added CiBuildStepTable and CiBuildStepTableModel; updated CiToolWindowFactory to use the new JBTable-based components; added getStatus() to BuildStep interface and CircleCiBuildStep

--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -24,6 +24,8 @@
 
   <extensions defaultExtensionNs="com.intellij">
     <toolWindow id="Continuous Integration" anchor="bottom" factoryClass="ui.ciToolWindow.CiToolWindowFactory" />
+
+    <projectConfigurable groupId="build" displayName="Continuous Integration" id="ci" instance="ui.settings.CiOptionsConfigurable" />
     <!-- Add your extensions here -->
   </extensions>
 
