Cleaned up README; added service definition to plugin.xml

--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -25,6 +25,7 @@
   <extensions defaultExtensionNs="com.intellij">
     <toolWindow id="Continuous Integration" anchor="bottom" factoryClass="ui.ciToolWindow.CiToolWindowFactory" />
 
+    <projectService serviceImplementation="ui.settings.CiOptionsProvider" />
     <projectConfigurable groupId="build" displayName="Continuous Integration" id="ci" instance="ui.settings.CiOptionsConfigurable" />
     <!-- Add your extensions here -->
   </extensions>
